--- a/blocks/dealer-locator/dealer-locator.css
+++ b/blocks/dealer-locator/dealer-locator.css
@@ -403,8 +403,14 @@ main .section.dealer-locator-container > div {
 }
 
 .dealer-locator .nearby-pins article.teaser .dealerPanelContainer {
-    width: 70% !important; 
+    width: unset; 
 }
+
+@media (min-width: 496px) and (max-width: 992px) {
+    .sidebar .dealerPanelContainer {
+      width: 70% !important;
+    }
+  }
 
 .dealer-locator .nearby-pins article.teaser .teaser-top {
     cursor: pointer
@@ -2463,6 +2469,10 @@ main .section.dealer-locator-container > div {
     .sidebar .panel-card:hover {
         background-color: unset!important
     }
+
+    .sidebar .dealerPanelContainer {
+        width: 100% !important;
+      }
 
     .sidebar .sidebar-content {
         height: calc(100% - 4em)!important;
