fix button color change

--- a/blocks/v2-content-carousel/v2-content-carousel.css
+++ b/blocks/v2-content-carousel/v2-content-carousel.css
@@ -125,15 +125,13 @@ ul.v2-content-carousel__arrowcontrols {
   border-radius: 4px;
 }
 
-.v2-content-carousel__button .icon-arrow-left svg,
-.v2-content-carousel__button .icon-arrow-right svg {
+.v2-content-carousel__button .icon svg {
   width: 48px;
   height: 48px;
 }
 
-.v2-content-carousel__button:disabled .icon-arrow-right svg path,
-.v2-content-carousel__button:disabled .icon-arrow-left svg path {
-  fill: var(--c-grey-2)
+.v2-content-carousel__button:disabled .icon svg {
+  color: var(--c-grey-2);
 }
 
 @media screen and (min-width: 744px) {
