--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -58,6 +58,7 @@
 
 .header__logo-image.icon svg {
   width: 100%;
+  height: 19px;
 }
 
 .header__link:any-link {
@@ -90,7 +91,7 @@
 .header__link .icon svg,
 .header__close-menu .icon svg {
   height: 24px;
-  width: auto;
+  width: 24px;
   display: block;
 }
 
