scroll bar added

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,6 +7,9 @@
 
   /* reassigning, as this property is used elsewhere with different values in non-v2 pages */
   --wrapper-width: 1170px;
+
+  /* max height set for both trucks and powertrain dropdown in header. The rest overflows in scroll */ 
+  --max-accordion-height: 465px;
 }
 
 @media (prefers-reduced-motion) {
@@ -474,6 +477,8 @@
     gap: 24px 16px;
     display: flex;
     flex-wrap: wrap;
+    max-height: var(--trucks-acoordion-height);
+    overflow: scroll;
   }
 
   /* stylelint-disable-next-line no-descending-specificity */
@@ -510,6 +515,8 @@
     display: flex;
     flex-wrap: wrap;
     gap: 32px;
+    max-height: var(--trucks-acoordion-height);
+    overflow: scroll;
   }
 }
 
