--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -477,7 +477,7 @@
     gap: 24px 16px;
     display: flex;
     flex-wrap: wrap;
-    max-height: var(--trucks-acoordion-height);
+    max-height: var(--max-accordion-height);
     overflow: scroll;
   }
 
@@ -515,7 +515,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 32px;
-    max-height: var(--trucks-acoordion-height);
+    max-height: var(--max-accordion-height);
     overflow: scroll;
   }
 }
