--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -372,7 +372,7 @@
     top: var(--nav-height);
     transition: unset;
     overflow-y: auto;
-    max-height: calc(100vh - 2 * var(--nav-height));
+    max-height: calc(100vh - 5 * var(--nav-height));
     display: none;
   }
 
@@ -387,6 +387,8 @@
     display: flex;
     min-width: 180px;
     gap: 48px;
+    overflow-y: scroll;
+    padding-bottom: 24px;
   }
 
   .header__main-nav-item > .header__accordion-container > .header__accordion-content-wrapper {
@@ -474,9 +476,6 @@
     gap: 24px 16px;
     display: flex;
     flex-wrap: wrap;
-    max-height: 465px;
-    overflow-y: auto;
-    scrollbar-width: thin;
   }
 
   /* stylelint-disable-next-line no-descending-specificity */
@@ -513,9 +512,6 @@
     display: flex;
     flex-wrap: wrap;
     gap: 32px;
-    max-height: 465px;
-    overflow-y: auto;
-    scrollbar-width: thin;
   }
 }
 
