--- a/templates/magazine/magazine.css
+++ b/templates/magazine/magazine.css
@@ -268,6 +268,7 @@ div.section.eloqua-form-container > div.eloqua-form-wrapper {
   body.magazine > main .section .default-content-wrapper,
   body.magazine > main .section .teaser-cards-wrapper,
   body.magazine > main .section .teaser-grid-wrapper,
+  body.magazine > main .section .v2-quote-wrapper,
   body.magazine > main .section .columns-wrapper {
     float: right;
     margin: 0 1%;
