--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -388,11 +388,15 @@
     min-width: 180px;
     gap: 48px;
     overflow-y: scroll;
-    padding-bottom: 24px;
+    scrollbar-width: thin;
   }
 
   .header__main-nav-item > .header__accordion-container > .header__accordion-content-wrapper {
     padding: 32px 64px 48px;
+  }
+
+  .header__category-content-wrapper {
+    padding-bottom: 24px;
   }
 
   .header__main-nav-link.header__link:any-link {
