--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -388,6 +388,7 @@
     min-width: 180px;
     gap: 48px;
     overflow-y: scroll;
+    scrollbar-width: thin;
   }
 
   .header__main-nav-item > .header__accordion-container > .header__accordion-content-wrapper {
@@ -396,10 +397,6 @@
 
   .header__category-content-wrapper {
     padding-bottom: 24px;
-  }
-
-  .header__accordion-content-wrapper.header__accordion-content-wrapper--with-images::-webkit-scrollbar {
-    display: none;
   }
 
   .header__main-nav-link.header__link:any-link {
