--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -398,7 +398,8 @@
     padding-bottom: 24px;
   }
 
-  .header__accordion-content-wrapper.header__accordion-content-wrapper--with-images::-webkit-scrollbar {
+  .header__accordion-content-wrapper::-webkit-scrollbar,
+  .header__accordion-content-wrapper--with-images::-webkit-scrollbar {
     display: none;
   }
 
