--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -388,18 +388,15 @@
     min-width: 180px;
     gap: 48px;
     overflow-y: scroll;
+    scrollbar-width: thin;
+    padding-bottom: 24px;
   }
 
   .header__main-nav-item > .header__accordion-container > .header__accordion-content-wrapper {
     padding: 32px 64px 48px;
   }
 
-  .header__category-content-wrapper {
-    padding-bottom: 24px;
-  }
-
-  .header__accordion-content-wrapper::-webkit-scrollbar,
-  .header__accordion-content-wrapper--with-images::-webkit-scrollbar {
+  .header__accordion-content-wrapper .header__accordion-content-wrapper::-webkit-scrollbar {
     display: none;
   }
 
