--- a/blocks/v2-quote/v2-quote.css
+++ b/blocks/v2-quote/v2-quote.css
@@ -4,54 +4,85 @@
 }
 
 .v2-quote {
-  padding: 48px 0;
+  --quote-gap: 8px;
+
   display: flex;
   flex-direction: column;
-  gap: 8px;
-  background: var(--card-background);
-  color: var(--card-text);
+  gap: var(--quote-gap);
+  color: var(--text-color);
   text-align: center;
 }
 
-.v2-quote blockquote,
-.v2-quote blockquote p {
+.v2-quote--with-background {
+  --quote-padding: 48px;
+
+  padding: var(--quote-padding) 0;
+  background: var(--card-background);
+  color: var(--card-text);
+}
+
+.v2-quote__quote-text,
+.v2-quote__quote-source {
+  margin: 0 auto;
+}
+
+.v2-quote__quote-text,
+.v2-quote__quote-text p {
   hanging-punctuation: none;
   text-indent: 0;
   margin-top: 0;
   margin-bottom: 0;
 }
 
-.v2-quote__quote-text,
-.v2-quote__quote-source {
-  margin: 0 auto;
-  max-width: var(--text-block-max-width, calc(100vw - 32px));
-}
-
-/* stylelint-disable-next-line no-descending-specificity */
 .v2-quote__quote-text p {
-  font: 400 var(--f-heading-6-font-size) / var(--f-heading-6-line-height) var(--font-family-heading);
-  letter-spacing: var(--f-heading-6-letter-spacing);
+  font: 400 var(--f-heading-4-font-size) / var(--f-heading-4-line-height) var(--font-family-heading);
+  letter-spacing: var(--f-heading-4-letter-spacing);
   text-wrap: balance;
 }
 
-/* stylelint-disable-next-line no-descending-specificity */
-.v2-quote__quote-text + p {
+p.v2-quote__quote-source {
+  font: var(--f-body-font-size) / var(--f-body-line-height) var(--font-family-body);
+  letter-spacing: var(--f-body-letter-spacing);
+}
+
+.v2-quote--with-background > * {
+  max-width: var(--text-block-max-width, calc(100vw - 32px));
+}
+
+.v2-quote--with-background .v2-quote__quote-text p {
+  font: 400 var(--f-heading-6-font-size) / var(--f-heading-6-line-height) var(--font-family-heading);
+  letter-spacing: var(--f-heading-6-letter-spacing);
+}
+
+.v2-quote--with-background .v2-quote__quote-source {
   font: var(--f-subtitle-1-font-size) / var(--f-subtitle-1-line-height) var(--font-family-heading);
   letter-spacing: var(--f-subtitle-1-letter-spacing);
 }
 
 @media screen and (min-width: 744px) {
   .v2-quote {
-    gap: 16px;
+    --quote-gap: 16px;
   }
 
   .v2-quote__quote-text p {
+    font-size: var(--f-heading-3-font-size);
+    line-height: var(--f-heading-3-line-height);
+    letter-spacing: var(--f-heading-3-letter-spacing);
+  }
+
+  p.v2-quote__quote-source {
+    font-size: var(--f-body-2-font-size);
+    line-height: var(--f-body-2-line-height);
+    letter-spacing: var(--f-body-2-letter-spacing);
+  }
+
+  .v2-quote--with-background .v2-quote__quote-text p {
     font-size: var(--f-heading-4-font-size);
     line-height: var(--f-heading-4-line-height);
     letter-spacing: var(--f-heading-4-letter-spacing);
   }
 
-  .v2-quote__quote-text + p {
+  .v2-quote--with-background .v2-quote__quote-source {
     font-size: var(--f-heading-6-font-size);
     line-height: var(--f-heading-6-line-height);
     letter-spacing: var(--f-heading-6-letter-spacing);
@@ -60,7 +91,10 @@
 
 @media screen and (min-width: 1200px) {
   .v2-quote {
-    padding: 200px 0;
-    gap: 24px;
+    --quote-gap: 24px;
+  }
+
+  .v2-quote--with-background {
+    --quote-padding: 200px;
   }
 }
