--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -383,21 +383,26 @@
     justify-content: space-between;
   }
 
-  .header__accordion-content-wrapper {
+  .header__accordion-content-wrapper:not(.inner-accordion) {
     display: flex;
     min-width: 180px;
     gap: 48px;
     overflow-y: scroll;
-    padding-bottom: 24px;
+    scrollbar-width: thin;
   }
 
   .header__main-nav-item > .header__accordion-container > .header__accordion-content-wrapper {
     padding: 32px 64px 48px;
   }
 
+  .header__accordion-content-wrapper.inner-accordion {
+    padding-bottom: 24px;
+    scrollbar-width: none;
+  }
+
   .header__accordion-content-wrapper::-webkit-scrollbar-button,
-  .header__main-nav-item > .header__accordion-container > .header__accordion-content-wrapper::-webkit-scrollbar-button,
-  .header__main-nav-item > .header__accordion-container > .header__accordion-content-wrapper::-webkit-scrollbar {
+  .header__accordion-content-wrapper.inner-accordion::-webkit-scrollbar-button,
+  .header__accordion-content-wrapper.inner-accordion::-webkit-scrollbar {
     display: none;
   }
 
