--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -387,7 +387,7 @@
     display: flex;
     min-width: 180px;
     gap: 48px;
-    overflow-y: scroll;
+    overflow-y: auto;
     scrollbar-width: thin;
   }
 
