--- a/blocks/v2-hero/v2-hero.css
+++ b/blocks/v2-hero/v2-hero.css
@@ -66,13 +66,14 @@
 }
 
 .v2-hero__content-wrapper {
+  --padding-bottom-calc: calc((var(--v2-hero-padding) * 2) + var(--scroll-icon-height));
+
   color: var(--c-main-black);
   position: relative;
   display: flex;
   flex-direction: column;
   min-height: calc(100svh - var(--nav-height));
-  padding: var(--v2-hero-padding);
-  padding-bottom: calc((var(--v2-hero-padding) * 2) + var(--scroll-icon-height));
+  padding: var(--v2-hero-padding) var(--v2-hero-padding) var(--padding-bottom-calc);
   background: linear-gradient(180deg, rgb(255 255 255 / 40%) 0%, rgb(255 255 255 / 0%) 100%);
 }
 
@@ -147,21 +148,17 @@
   width: max-content;
 }
 
-.v2-hero--compact .v2-hero__content-wrapper {
-  --v2-hero-compact-padding: 24px;
+.v2-hero--compact {
+  --v2-hero-padding: 24px 32px;
+}
 
-  padding-block: var(--v2-hero-compact-padding);
+.v2-hero--compact .v2-hero__content-wrapper {
+  padding: var(--v2-hero-padding);
 }
 
 .v2-hero--compact,
 .v2-hero--compact .v2-hero__content-wrapper {
   min-height: fit-content;
-}
-
-.v2-hero--compact .v2-hero__title {
-  --hero-magazine-font-size: 70px;
-
-  font-size: var(--hero-magazine-font-size) !important;
 }
 
 /* Scroll icon */
@@ -261,11 +258,7 @@
     letter-spacing: 7px;
   }
 
-  .v2-hero--compact .v2-hero__content-wrapper {
-    --v2-hero-compact-padding: 80px;
-  }
-
-  .v2-hero--compact .v2-hero__title {
-    --hero-magazine-font-size: 100px;
+  .v2-hero--compact {
+    --v2-hero-padding: 80px 50px;
   }
 }
