--- a/blocks/v2-hero/v2-hero.css
+++ b/blocks/v2-hero/v2-hero.css
@@ -46,7 +46,6 @@
   .v2-inpage-navigation-wrapper + .v2-hero-container .v2-hero__content-wrapper {
     min-height: calc(100svh - (var(--nav-height) + var(--inpage-navigation-height) - 2px));
   }
-
 }
 
 .section.v2-hero-container {
@@ -61,18 +60,20 @@
   width: 100%;
 }
 
-.v2-hero--background-right .v2-hero__image, .v2-hero--background-right .v2-hero__video {
+.v2-hero--background-right .v2-hero__image,
+.v2-hero--background-right .v2-hero__video {
   object-position: center right;
 }
 
 .v2-hero__content-wrapper {
+  --padding-bottom-calc: calc((var(--v2-hero-padding) * 2) + var(--scroll-icon-height));
+
   color: var(--c-main-black);
   position: relative;
   display: flex;
   flex-direction: column;
   min-height: calc(100svh - var(--nav-height));
-  padding: var(--v2-hero-padding);
-  padding-bottom: calc((var(--v2-hero-padding) * 2) + var(--scroll-icon-height));
+  padding: var(--v2-hero-padding) var(--v2-hero-padding) var(--padding-bottom-calc);
   background: linear-gradient(180deg, rgb(255 255 255 / 40%) 0%, rgb(255 255 255 / 0%) 100%);
 }
 
@@ -94,6 +95,10 @@
 
 .v2-hero--dark {
   background-color: var(--c-grey-4);
+}
+
+.v2-hero--background-transparent {
+  background-color: transparent;
 }
 
 .v2-hero--dark .v2-hero__content-wrapper {
@@ -147,6 +152,19 @@
   width: max-content;
 }
 
+.v2-hero--compact {
+  --v2-hero-padding: 24px 32px;
+}
+
+.v2-hero--compact .v2-hero__content-wrapper {
+  padding: var(--v2-hero-padding);
+}
+
+.v2-hero--compact,
+.v2-hero--compact .v2-hero__content-wrapper {
+  min-height: fit-content;
+}
+
 /* Scroll icon */
 .v2-hero__scroll-icon {
   border-radius: 20px;
@@ -162,7 +180,7 @@
   animation: scroll-move 3s infinite;
   background-color: var(--c-white);
   border-radius: 50%;
-  content: '';
+  content: "";
   height: var(--scroll-dot-width);
   left: calc(50% - (var(--scroll-dot-width) / 2));
   position: absolute;
@@ -178,7 +196,8 @@
   padding: 24px 0;
 }
 
-.v2-hero--centered .v2-hero__countdown, .v2-hero--center-bottom .v2-hero__countdown {
+.v2-hero--centered .v2-hero__countdown,
+.v2-hero--center-bottom .v2-hero__countdown {
   justify-content: center;
 }
 
@@ -200,7 +219,7 @@
 .v2-hero__countdown-number {
   font: 400 var(--f-heading-3-5-font-size) / var(--f-heading-3-5-line-height) var(--ff-volvo-novum-medium);
   letter-spacing: 0.25px;
-  font-feature-settings: 'tnum';
+  font-feature-settings: "tnum";
 }
 
 .v2-hero__countdown-label {
@@ -210,7 +229,6 @@
 }
 
 /* END - Countdown  */
-
 
 @media (min-width: 744px) {
   .v2-hero {
@@ -242,5 +260,9 @@
     font-size: 100px;
     line-height: 85%;
     letter-spacing: 7px;
+  }
+
+  .v2-hero--compact {
+    --v2-hero-padding: 80px 50px;
   }
 }
