Add image background for slow devices #553

--- a/templates/v2-magazine/v2-magazine.css
+++ b/templates/v2-magazine/v2-magazine.css
@@ -24,6 +24,7 @@
 .v2-magazine-article-hero__img-container {
   grid-area: image;
   aspect-ratio: var(--hero-image-aspect-ratio);
+  background-color: var(--media-background);
 }
 
 .v2-magazine-article-hero__img-container img {
